# discord_mcp_agent

./: REDOME  REDOME.md  automatic_processing_utils.py  bot.py  config.py  file_manifest_utils.py  image_to_text_tool.py  llm_utils.py  main.py  pyproject.toml  workflow_log_utils.py  workflow_setup_utils.py
project_workspace/workflow_20250511_235310_6fcb5069/: creatinine_clearance_info.txt
project_workspace/workflow_20250512_020857_b3af2cd5/: plot_2d_gaussian.py
project_workspace/workflow_20250526_170145_c5240b82/: file_manifest.json  gaussian_plot.py  research_notes.md
tools/: bootstrap_path.py  file_system_mcp.py  logging_mcp.py  search_mcp.py
workflow_logs/: workflow_20250511_235310_6fcb5069.md  workflow_20250512_020857_b3af2cd5.md  workflow_20250526_170145_c5240b82.md
